gateway/03-gateway.yaml
# Gateway -> integration of gateway class and LoadBalancerConfiguration. setting the listeners and ports
# Gateway (03-gateway.yaml): Defines the infrastructure entry point (the Application Load Balancer and its listeners).
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: roboshop
  namespace: roboshop
spec:
  gatewayClassName: aws-alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration   # binding 01-gateway-class aws-alb and 02-Ibc alb configuration
      name: roboshop-alb
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.exptrack.shop"             # opening ports 
    allowedRoutes:
      namespaces:
        from: Same

# Listener port
